added some relatively unflexible options that will generate a model and migration with a belongs_to relationship with a given model

--- a/generators/event_calendar/templates/model.rb.erb
+++ b/generators/event_calendar/templates/model.rb.erb
@@ -1,4 +1,5 @@
 class <%= class_name.classify %> < ActiveRecord::Base
   has_event_calendar
-  
+  <%= "belongs_to :#{user_relationship[:model_name].underscore}\n" if user_relationship -%>
+
 end
