--- a/generators/event_calendar/templates/migration.rb.erb
+++ b/generators/event_calendar/templates/migration.rb.erb
@@ -2,6 +2,7 @@ class Create<%= class_name.classify.pluralize %> < ActiveRecord::Migration
   def self.up
     create_table :<%= class_name.pluralize %> do |t|
       t.string :name
+      <%= "t.integer :#{user_relationship[:column_name]}\n" if user_relationship -%>
       t.datetime :start_at
       t.datetime :end_at
       <%- if options[:use_all_day] -%>
